--- a/Soñando con Suculentas/compraFinalizada.html
+++ b/Soñando con Suculentas/compraFinalizada.html
@@ -20,7 +20,7 @@
 <body>
     <header class="mb-lg-5 mb-xl-5 mb-2">
         <div id="cabecera" class="d-flex justify-content-center align-items-center p-sm-5 p-lg-5 mb-3">
-            <h1 class="display-2 letraCursiva colorVerde">Soñando con Suculentas</h1>
+            <h1><a class="display-2 letraCursiva colorVerde" href="index.html">Soñando con Suculentas</a></h1>
         </div>
     </header>
     
