--- a/Soñando con Suculentas/perfil.html
+++ b/Soñando con Suculentas/perfil.html
@@ -21,7 +21,7 @@
 <body>
     <header class="mb-lg-5 mb-xl-5 mb-2">
         <div id="cabecera" class="d-flex justify-content-center align-items-center p-sm-5 p-lg-5 mb-3">
-            <h1 class="display-2 letraCursiva colorVerde">Soñando con Suculentas</h1>
+            <h1><a class="display-2 letraCursiva colorVerde" href="index.html">Soñando con Suculentas</a></h1>
         </div>
     </header>
 
@@ -121,7 +121,6 @@
         <section class="pt-4 border-top ">
             <div class="container text-center text-md-start mt-5 ">
                 <div class="row mt-3">
-
                     <div class="col-md-3 col-lg-3 col-xl-3 pt-2 mx-auto mb-4 text-dark">
                         <h6 class="text-uppercase mb-3 letraCursiva fw-bold fs-5">Soñando con suculentas</h6>
                         <p class="letra1-1rem text-center"> Un espacio para disfrutar de las suculentas, compartiendo experiencias e
@@ -133,18 +132,16 @@
                         <h6 class="text-uppercase fw-bold mb-4">Links de interés</h6>
                         <p><a target="_blank" href="https://succulentalley.com/types-of-succulents-with-pictures/">Identificación de suculentas</a></p>
                         <p><a target="_blank" href="http://www.manolithops.es/">Página sobre Lithops</a></p>
-                        <p><a target="_blank" href="https://carniplant.es/tienda02/">Tienda de suculentas</a></p>
+                        <p><a target="_blank" href="https://viverosaznaljarafe.com/">Vivero Aznaljarafe</a></p>
+                        <p><a target="_blank" href="https://www.viverosbalbuena.com/">Vivero Balbuena</a></p>
                         <p><a target="_blank" href="https://foro.infojardin.com/forums/10-suculentas-no-cactaceas.39/">Foro de plantas suculentas no cactáceas</a></p>
                     </div>
 
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ps-4">
                         <!-- Links -->
                         <h6 id="contactoFooter" class="text-uppercase fw-bold mb-4">Contacto</h6>
-                        <p>
-                            <a href="formulario.html"><i class="fas fa-align-justify me-3"></i>Rellena nuestro formulario</a></p>
-                        <p>
-                            <a href="mailto:scs@gmail.com"><i class="fas fa-envelope me-3"></i>Mándanos un email</a>
-                        </p>
+                        <p><a href="formulario.html"><i class="fas fa-align-justify me-3"></i>Rellena nuestro formulario</a></p>
+                        <p><a href="mailto:scs@gmail.com"><i class="fas fa-envelope me-3"></i>Mándanos un email</a></p>
                         <p class="mb-0 fs-5"> Visita nuestras Redes Sociales</p>
                         <div class="d-flex justify-content-center">
                             <div class="d-inline-flex">
