--- a/Soñando con Suculentas/producto.html
+++ b/Soñando con Suculentas/producto.html
@@ -19,7 +19,7 @@
     <body>
         <header class="mb-lg-5 mb-xl-5 mb-2">
             <div id="cabecera" class="d-flex justify-content-center align-items-center p-sm-5 p-lg-5 mb-3">
-                <h1 class="display-2 letraCursiva colorVerde">Soñando con Suculentas</h1>
+                <h1><a class="display-2 letraCursiva colorVerde" href="index.html">Soñando con Suculentas</a></h1>
             </div>
         </header>
         
@@ -139,52 +139,52 @@
             <i id="flecha" class="bi bi-chevron-double-up display-5 d-none d-sm-inline p-1"></i>
         </a>
 
-        <!-- Footer -->
-        <footer class="text-center bg-light text-dark descripcion_footer">
-            <section class="pt-4 border-top ">
-                <div class="container text-center text-md-start mt-5 ">
-                    <div class="row mt-3">
-                        <div class="col-md-3 col-lg-3 col-xl-3 pt-2 mx-auto mb-4 text-dark">
-                            <h6 class="text-uppercase mb-3 letraCursiva fw-bold fs-5">Soñando con suculentas</h6>
-                            <p class="letra1-1rem text-center"> Un espacio para disfrutar de las suculentas, compartiendo experiencias e
-                                información entre todas las personas que amamos estas plantas.
-                            </p>
-                        </div>
+    <!-- Footer -->
+    <footer class="text-center bg-light text-dark descripcion_footer">
+        <section class="pt-4 border-top ">
+            <div class="container text-center text-md-start mt-5 ">
+                <div class="row mt-3">
+                    <div class="col-md-3 col-lg-3 col-xl-3 pt-2 mx-auto mb-4 text-dark">
+                        <h6 class="text-uppercase mb-3 letraCursiva fw-bold fs-5">Soñando con suculentas</h6>
+                        <p class="letra1-1rem text-center"> Un espacio para disfrutar de las suculentas, compartiendo experiencias e
+                            información entre todas las personas que amamos estas plantas.
+                        </p>
+                    </div>
 
-                        <div class="col-md-4 col-lg-3 col-xl-3 mb-4">
-                            <h6 class="text-uppercase fw-bold mb-4">Links de interés</h6>
-                            <p><a target="_blank" href="https://succulentalley.com/types-of-succulents-with-pictures/">Identificación de suculentas</a></p>
-                            <p><a target="_blank" href="http://www.manolithops.es/">Página sobre Lithops</a></p>
-                            <p><a target="_blank" href="https://viverosaznaljarafe.com/">Vivero Aznaljarafe</a></p>
-                            <p><a target="_blank" href="https://www.viverosbalbuena.com/">Vivero Balbuena</a></p>
-                            <p><a target="_blank" href="https://foro.infojardin.com/forums/10-suculentas-no-cactaceas.39/">Foro de plantas suculentas no cactáceas</a></p>
-                        </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mb-4">
+                        <h6 class="text-uppercase fw-bold mb-4">Links de interés</h6>
+                        <p><a target="_blank" href="https://succulentalley.com/types-of-succulents-with-pictures/">Identificación de suculentas</a></p>
+                        <p><a target="_blank" href="http://www.manolithops.es/">Página sobre Lithops</a></p>
+                        <p><a target="_blank" href="https://viverosaznaljarafe.com/">Vivero Aznaljarafe</a></p>
+                        <p><a target="_blank" href="https://www.viverosbalbuena.com/">Vivero Balbuena</a></p>
+                        <p><a target="_blank" href="https://foro.infojardin.com/forums/10-suculentas-no-cactaceas.39/">Foro de plantas suculentas no cactáceas</a></p>
+                    </div>
 
-                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ps-4">
-                            <!-- Links -->
-                            <h6 id="contactoFooter" class="text-uppercase fw-bold mb-4">Contacto</h6>
-                            <p><a href="formulario.html"><i class="fas fa-align-justify me-3"></i>Rellena nuestro formulario</a></p>
-                            <p><a href="mailto:scs@gmail.com"><i class="fas fa-envelope me-3"></i>Mándanos un email</a></p>
-                            <p class="mb-0 fs-5"> Visita nuestras Redes Sociales</p>
-                            <div class="d-flex justify-content-center">
-                                <div class="d-inline-flex">
-                                    <a href="https://www.instagram.com/" target="_blank"
-                                        class="fs-2 my-3 me-3"><i class="fab fa-instagram-square"></i></a>
-                                    <a href="https://es-es.facebook.com/" target="_blank" class="fs-2 m-3"><i class="fab fa-facebook-square"></i></a>
-                                    <a href="https://twitter.com/" target="_blank" class="fs-2 m-3"><i class="fab fa-twitter-square"></i></a>
-                                </div>
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ps-4">
+                        <!-- Links -->
+                        <h6 id="contactoFooter" class="text-uppercase fw-bold mb-4">Contacto</h6>
+                        <p><a href="formulario.html"><i class="fas fa-align-justify me-3"></i>Rellena nuestro formulario</a></p>
+                        <p><a href="mailto:scs@gmail.com"><i class="fas fa-envelope me-3"></i>Mándanos un email</a></p>
+                        <p class="mb-0 fs-5"> Visita nuestras Redes Sociales</p>
+                        <div class="d-flex justify-content-center">
+                            <div class="d-inline-flex">
+                                <a href="https://www.instagram.com/" target="_blank"
+                                    class="fs-2 my-3 me-3"><i class="fab fa-instagram-square"></i></a>
+                                <a href="https://es-es.facebook.com/" target="_blank" class="fs-2 m-3"><i class="fab fa-facebook-square"></i></a>
+                                <a href="https://twitter.com/" target="_blank" class="fs-2 m-3"><i class="fab fa-twitter-square"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-
-            <!-- Copyright -->
-            <div id="fondo-copyright" class="text-center text-secondary p-4 col-12">
-                <p class="d-inline">© 2022 Copyright</p>
-                <a class="text-secondary fw-bold" target="_blank" href="https://www.linkedin.com/in/laura-mart%C3%ADnez-557796171/">Laura Martínez</a>
             </div>
-        </footer>
+        </section>
+
+        <!-- Copyright -->
+        <div id="fondo-copyright" class="text-center text-secondary p-4 col-12">
+            <p class="d-inline">© 2022 Copyright</p>
+            <a class="text-secondary fw-bold" target="_blank" href="https://www.linkedin.com/in/laura-mart%C3%ADnez-557796171/">Laura Martínez</a>
+        </div>
+    </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
