--- a/Soñando con Suculentas/index.html
+++ b/Soñando con Suculentas/index.html
@@ -86,7 +86,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Agavaceae</h5>
                   </div>
-                  <img src="img/agave.jpg.webp" class="card-img-top" alt="Agave potatorum">
+                  <div id="div-img">
+                    <img src="img/agave.jpg.webp" class="card-img-top" alt="Agave potatorum">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Agave potatorum</h6>
                 </div>
               </div>
@@ -96,7 +98,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Aizoaceae</h5>
                   </div>
-                  <img src="img/Lithops-karasmontana-1.jpg" class="card-img-top" alt="Lithops karasmontana">
+                  <div id="div-img">
+                    <img src="img/Lithops-karasmontana-1.jpg" class="card-img-top" alt="Lithops karasmontana">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Lithops karasmontana</h6>
                 </div>
               </div>
@@ -106,7 +110,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Apocynaceae</h5>
                   </div>
-                  <img src="img/orbea.jpg" class="card-img-top" alt="...">
+                  <div id="div-img">
+                    <img src="img/orbea.jpg" class="card-img-top" alt="...">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Orbea variegata</h6>
                 </div>
               </div>
@@ -116,7 +122,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Asphodelaceae</h5>
                   </div>
-                  <img src="img/haworthia_coarctata2.jpg" class="card-img-top" alt="Haworthia coarctata">
+                  <div id="div-img">
+                    <img src="img/haworthia_coarctata2.jpg" class="card-img-top" alt="Haworthia coarctata">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Haworthia coarctata</h6>
                 </div>
               </div>
@@ -126,7 +134,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Cactaceae</h5>
                   </div>
-                  <img src="img/gymnocalycium-mihanovichii.jpg" class="card-img-top" alt="Gymnocalycium mihanovichii">
+                  <div id="div-img">
+                    <img src="img/gymnocalycium-mihanovichii.jpg" class="card-img-top" alt="Gymnocalycium mihanovichii">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Gymnocalycium mihanovichii</h6>
                 </div>
               </div>
@@ -136,7 +146,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Crassulaceae</h5>
                   </div>
-                  <img src="img/graptopetalum-superbum.jpg" class="card-img-top" alt="Graptopetalum superbum">
+                  <div id="div-img">
+                    <img src="img/graptopetalum-superbum.jpg" class="card-img-top" alt="Graptopetalum superbum">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Graptopetalum superbum</h6>
                 </div>
               </div>
@@ -146,7 +158,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Euphorbiaceae</h5>
                   </div>
-                  <img src="img/Euphorbia-lactea-White-Ghost.jpg" class="card-img-top" alt="Euphorbia lactea 'White Ghost'">
+                  <div id="div-img">
+                    <img src="img/Euphorbia-lactea-White-Ghost.jpg" class="card-img-top" alt="Euphorbia lactea 'White Ghost'">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Euphorbia lactea 'White Ghost'</h6>
                 </div>
               </div>
@@ -156,7 +170,9 @@
                   <div class="card-body">
                     <h5 class="card-title text-center">Portulacaceae</h5>
                   </div>
-                  <img src="img/portulaca-gilliesii.jpg" class="card-img-top" alt="Portulaca gilliesii">
+                  <div id="div-img">
+                    <img src="img/portulaca-gilliesii.jpg" class="card-img-top" alt="Portulaca gilliesii">
+                  </div>
                   <h6 class="card-subtitle mt-2 text-muted pb-2 ps-2">Portulaca gilliesii</h6>
                 </div>
               </div>
