--- a/Soñando con Suculentas/tienda.html
+++ b/Soñando con Suculentas/tienda.html
@@ -72,7 +72,9 @@
                                         <div class="card-body">
                                             <h4 class="text-center">Echeveria Dionisos M</h4>
                                         </div>
-                                        <img src="img/dionisos.jpg" class="card-img-top" alt="Echeveria Dionisos M">
+                                        <div class="div-img">
+                                            <img src="img/dionisos.jpg" class="card-img-top" alt="Echeveria Dionisos M">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -82,7 +84,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Echeveria Cuspidata S</h4>
                                         </div>
-                                        <img src="img/cuspidata.jpg" class="card-img-top" alt="Echeveria Cuspidata S">
+                                        <div class="div-img">
+                                            <img src="img/cuspidata.jpg" class="card-img-top" alt="Echeveria Cuspidata S">
+                                        </div>
                                         <a href="producto.html" class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</a>
                                     </div>
                                 </div>
@@ -92,7 +96,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Graptopetalum Paraguayense L</h4>
                                         </div>
-                                        <img src="img/paraguayense1.jpg" class="card-img-top" alt="Graptopetalum Paraguayense L">
+                                        <div class="div-img">
+                                            <img src="img/paraguayense1.jpg" class="card-img-top" alt="Graptopetalum Paraguayense L">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -102,7 +108,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Pachyphytum Oviferum S</h4>
                                         </div>
-                                        <img src="img/oviferum2.jpg" class="card-img-top" alt="Pachyphytum Oviferum S">
+                                        <div class="div-img">
+                                            <img src="img/oviferum2.jpg" class="card-img-top" alt="Pachyphytum Oviferum S">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -112,7 +120,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Echeveria Raindrops Híbrido M</h4>
                                         </div>
-                                        <img src="img/raindrops.jpg" class="card-img-top" alt="Echeveria Raindrops Híbrido">
+                                        <div class="div-img">
+                                            <img src="img/raindrops.jpg" class="card-img-top" alt="Echeveria Raindrops Híbrido">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -122,7 +132,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Echeveria Perle Von Nürnberg L</h4>
                                         </div>
-                                        <img src="img/perle.jpg" class="card-img-top" alt="Echeveria Perle Von Nürnberg L">
+                                        <div class="div-img">
+                                            <img src="img/perle.jpg" class="card-img-top" alt="Echeveria Perle Von Nürnberg L">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>   
@@ -132,7 +144,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Kalanchoe Fedtschenkoi M</h4>
                                         </div>
-                                        <img src="img/kalanchoe.jpg" class="card-img-top" alt="Kalanchoe Fedtschenkoi M">
+                                        <div class="div-img">
+                                            <img src="img/kalanchoe.jpg" class="card-img-top" alt="Kalanchoe Fedtschenkoi M">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -142,7 +156,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Kalanchoe Beharensis 'Fang' L</h4>
                                         </div>
-                                        <img src="img/beharensis.jpg" class="card-img-top" alt="Kalanchoe Beharensis 'Fang' L">
+                                        <div class="div-img">
+                                            <img src="img/beharensis.jpg" class="card-img-top" alt="Kalanchoe Beharensis 'Fang' L">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
@@ -152,7 +168,9 @@
                                         <div class="card-body">
                                             <h4 class="card-title text-center">Echeveria Agavoides Híbrido M</h4>
                                         </div>
-                                        <img src="img/agavoides.jpg" class="card-img-top" alt="Echeveria Agavoides Híbrido M">
+                                        <div class="div-img">
+                                            <img src="img/agavoides.jpg" class="card-img-top" alt="Echeveria Agavoides Híbrido M">
+                                        </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
                                 </div>
