--- a/Soñando con Suculentas/vista/formulario.html
+++ b/Soñando con Suculentas/vista/formulario.html
@@ -2,20 +2,20 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- cdn para los iconos propios de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link href="css/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="img/botanic.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="../css/bootstrap.css"/>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="../img/botanic.svg" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Merienda:wght@400;700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/16f71d5ae1.js" crossorigin="anonymous"></script>
-    <title>Administración | Soñando con Suculentas</title>
+    <title>Formulario de contacto | Soñando con Suculentas</title>
 </head>
 
 <body>
@@ -24,18 +24,14 @@
             <h1><a class="display-2 letraCursiva colorVerde" href="index.html">Soñando con Suculentas</a></h1>
         </div>
     </header>
-
-    <!-- Migas de pan -->
     <div class="container-fluid">
         <nav aria-label="breadcrumb" class="px-4">
-            <ol class="breadcrumb">
+            <ol class="breadcrumb" >
                 <li class="breadcrumb-item ps-2"><a href="index.html" class="migasPan">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">
-                    <span class="migasPanActivo">Administración</span></li>
+                <li class="breadcrumb-item active" aria-current="page"><span class="migasPanActivo">Formulario de contacto</span></li>
             </ol>
         </nav>
     </div>
-
     <nav class="navbar navbar-expand-lg navbar-light px-4">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -55,67 +51,77 @@
                         <a class="nav-link fs-5 me-2" href="cuidados.html#riego">Riego</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 me-2" href="cuidados.html#sustrato">Sustrato</a>    
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link fs-5" href="#contactoFooter">Contacto</a>    
+                        <a class="nav-link fs-5" href="cuidados.html#sustrato">Sustrato</a>    
                     </li>
                 </ul>
                 <div class="d-flex p-0">
-                    <a href="perfil.html" id="perfil" class="me-4 px-3 py-2  rounded-pill fw-bold boton" role="button">Usuario</a>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn boton" type="submit">Buscar</button>
-                    </form>
+                    <a href="perfil.html" class="me-4 px-3 py-2  rounded-pill fw-bold boton" role="button">Usuario</a>
                 </div>
             </div>
         </div>
     </nav>
-    <main class="container row my-5 p-md-5 mx-lg-0 mx-auto">
-        <div class="col-lg-2">
-            <a class="btn boton col-12 mb-3" role="button" id="editarUsuarios" href="#editaUsuario">Editar usuarios</a></li>
-            <a class="btn boton col-12 mb-3" role="button" id="editarPagina" href="#editaPagina">Editar tienda</a></li>
-        </div>
-        <div class="accordion col-lg-8 mx-auto" id="accordionExample">
-            <div  class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
-                    <button id="editaUsuario" class="accordion-button letraCursiva fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Editar usuarios
-                    </button>
-                </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <div class="list-group">
-                            <a href="crearUsuario.html" class="list-group-item list-group-item-action">Crear usuario</a>
-                            <a href="eliminarUsuario.html" class="list-group-item list-group-item-action">Eliminar usuario</a>
-                            <a href="modificarUsuario.html" class="list-group-item list-group-item-action">Modificar usuario</a>
-                        </div>
-                    </div>
+
+    <!--Contenido principal-->
+    <main class="container d-flex flex-column align-items-center p-3 my-4">      
+        <h2 class="letraCursiva text-center display-5 mb-4 pt-3 colorVerde">Mándanos un mensaje</h2>
+        <form method="post" id="contacto" class="d-flex flex-column col-lg-5 py-4 needs-validation" novalidate>        
+            <div class="my-3 col-10 mx-auto">
+                <input type="text" class="form-control ps-1" id="inputNombre" placeholder="Introduce tu nombre">
+            </div>
+            <div class="my-3 col-10 mx-auto">
+                <input type="email" class="form-control ps-1" id="inputEmail" placeholder="Introduce tu email" required>
+                <div class="invalid-feedback">
+                    Debes introducir tu dirección de correo electrónico.
                 </div>
             </div>
-
-            <div  class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                    <button id="editaPagina" class="accordion-button letraCursiva fs-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        Editar tienda
-                    </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <a href="agregarProducto.html" class="list-group-item list-group-item-action">Añadir producto</a>
-                        <a href="eliminarProducto.html" class="list-group-item list-group-item-action">Eliminar producto</a>
-                        <a href="modificarProducto.html" class="list-group-item list-group-item-action">Modificar producto</a>
-                    </div>
+            <div class="my-3 col-10 mx-auto">
+                <textarea class="form-control" name="textArea" id="textArea" cols="60" rows="7" placeholder="Escribe aquí tu mensaje" required></textarea>
+                <div class="invalid-feedback">
+                    ¿Qué nos quieres contar?
                 </div>
             </div>
-
-        </div>        
+                <div class="my-3 col-10 mx-auto">
+                    <h2 class="colorVerde letraCursiva fs-3">¿Qué suculentas son tus favoritas?</h2>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="cactus" checked>
+                        <label class="form-check-label" for="cactus">Cactáceas</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="noCac">
+                        <label class="form-check-label" for="noCac">No cactáceas</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="tropicales">
+                        <label class="form-check-label" for="tropicales">Tropicales</label>
+                    </div>
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" id="africanas">
+                        <label class="form-check-label" for="africanas">Africanas</label>
+                    </div>
+                </div>
+            <div class="my-3 col-10 mx-auto">
+                <p class="mb-2 letraCursiva fs-4 colorVerde">¿Necesitas enviarnos una foto?</p>
+                <input class="form-control form-control-sm" id="formFileSm" type="file">
+            </div>
+            <div class="my-3 col-10 mx-auto form-check">
+                <input class="form-check-input boton" type="checkbox" value="" id="flexCheckDefault" required>
+                <label class="form-check-label" for="flexCheckDefault">
+                    Acepto los Términos de Uso y La Política de Privacidad.
+                </label>
+                <div class="invalid-feedback">
+                    Debes aceptar para mandar tu mensaje.
+                </div>
+            </div>
+            
+            <button class="btn col-10 mx-auto my-3 boton2 fs-5" type="submit">Enviar</button>
+        </form>
+        
     </main>
 
-    <!-- Enlace a la parte superior de la página usando un icono de bootstrap-->
-    <a href="#cabecera" class="fixed-bottom text-end">
-        <i id="flecha" class="bi bi-chevron-double-up display-5 d-none d-sm-inline p-1"></i>
-    </a>
+        <!-- Enlace a la parte superior de la página usando un icono de bootstrap-->
+        <a href="#cabecera" class="fixed-bottom text-end">
+            <i id="flecha" class="bi bi-chevron-double-up display-5 d-none d-sm-inline p-1"></i>
+        </a>
 
     <!-- Footer -->
     <footer class="text-center bg-light text-dark descripcion_footer">
@@ -167,7 +173,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="js/main.js"></script>
+    <script>
+        // Función para la validación del formulario.
+        (function () {
+            'use strict'
+
+            var forms = document.querySelectorAll('.needs-validation')
+
+            Array.prototype.slice.call(forms)
+            .forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                    event.preventDefault()
+                    event.stopPropagation()
+                }
+
+                form.classList.add('was-validated')
+                }, false)
+            })
+        })()
+    </script>
 </body>
 
 </html>
