--- a/Soñando con Suculentas/vista/producto.html
+++ b/Soñando con Suculentas/vista/producto.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- cdn para los iconos propios de Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link href="css/bootstrap.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="css/style.css"/>
-        <link rel="shortcut icon" href="img/botanic.svg" type="image/x-icon" />
+        <link href="../css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="../css/style.css"/>
+        <link rel="shortcut icon" href="../img/botanic.svg" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Merienda:wght@400;700&display=swap" rel="stylesheet">
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                         </section>
-
+                    </div>
                         <!--Enviar comentario-->
                         <section class="d-flex justify-content-center flex-column align-items-center my-3">
                             <h2 class="letraCursiva colorVerde text-center mt-4">Déjanos tu comentario</h2>
