--- a/Soñando con Suculentas/vista/tienda.html
+++ b/Soñando con Suculentas/vista/tienda.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- cdn para los iconos propios de Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-        <link href="css/bootstrap.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="css/style.css"/>
-        <link rel="shortcut icon" href="img/botanic.svg" type="image/x-icon" />
+        <link href="../css/bootstrap.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="../css/style.css"/>
+        <link rel="shortcut icon" href="../img/botanic.svg" type="image/x-icon" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Merienda:wght@400;700&display=swap" rel="stylesheet">
@@ -73,7 +73,7 @@
                                             <h4 class="text-center">Echeveria Dionisos M</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/dionisos.jpg" class="card-img-top" alt="Echeveria Dionisos M">
+                                            <img src="../img/dionisos.jpg" class="card-img-top" alt="Echeveria Dionisos M">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -85,7 +85,7 @@
                                             <h4 class="card-title text-center">Echeveria Cuspidata S</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/cuspidata.jpg" class="card-img-top" alt="Echeveria Cuspidata S">
+                                            <img src="../img/cuspidata.jpg" class="card-img-top" alt="Echeveria Cuspidata S">
                                         </div>
                                         <a href="producto.html" class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</a>
                                     </div>
@@ -97,7 +97,7 @@
                                             <h4 class="card-title text-center">Graptopetalum Paraguayense L</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/paraguayense1.jpg" class="card-img-top" alt="Graptopetalum Paraguayense L">
+                                            <img src="../img/paraguayense1.jpg" class="card-img-top" alt="Graptopetalum Paraguayense L">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -109,7 +109,7 @@
                                             <h4 class="card-title text-center">Pachyphytum Oviferum S</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/oviferum2.jpg" class="card-img-top" alt="Pachyphytum Oviferum S">
+                                            <img src="../img/oviferum2.jpg" class="card-img-top" alt="Pachyphytum Oviferum S">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -121,7 +121,7 @@
                                             <h4 class="card-title text-center">Echeveria Raindrops Híbrido M</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/raindrops.jpg" class="card-img-top" alt="Echeveria Raindrops Híbrido">
+                                            <img src="../img/raindrops.jpg" class="card-img-top" alt="Echeveria Raindrops Híbrido">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -133,7 +133,7 @@
                                             <h4 class="card-title text-center">Echeveria Perle Von Nürnberg L</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/perle.jpg" class="card-img-top" alt="Echeveria Perle Von Nürnberg L">
+                                            <img src="../img/perle.jpg" class="card-img-top" alt="Echeveria Perle Von Nürnberg L">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -145,7 +145,7 @@
                                             <h4 class="card-title text-center">Kalanchoe Fedtschenkoi M</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/kalanchoe.jpg" class="card-img-top" alt="Kalanchoe Fedtschenkoi M">
+                                            <img src="../img/kalanchoe.jpg" class="card-img-top" alt="Kalanchoe Fedtschenkoi M">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -157,7 +157,7 @@
                                             <h4 class="card-title text-center">Kalanchoe Beharensis 'Fang' L</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/beharensis.jpg" class="card-img-top" alt="Kalanchoe Beharensis 'Fang' L">
+                                            <img src="../img/beharensis.jpg" class="card-img-top" alt="Kalanchoe Beharensis 'Fang' L">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
@@ -169,7 +169,7 @@
                                             <h4 class="card-title text-center">Echeveria Agavoides Híbrido M</h4>
                                         </div>
                                         <div class="div-img">
-                                            <img src="img/agavoides.jpg" class="card-img-top" alt="Echeveria Agavoides Híbrido M">
+                                            <img src="../img/agavoides.jpg" class="card-img-top" alt="Echeveria Agavoides Híbrido M">
                                         </div>
                                         <button class="btn col-7 mx-auto my-3 boton2 fs-6" type="submit">Ver producto</button>
                                     </div>
